# pdf_converter

./: .gitignore  setup.cfg  setup.py
docs/: architecture.md
pdf_converter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pdf_converter/builders/: html_builder.py  markdown_builder.py
pdf_converter/builders/components/html/: list_builder.py  table_builder.py
pdf_converter/builders/components/markdown/: list_builder.py  table_builder.py
pdf_converter/core/contracts/: ipdf_processor.py
pdf_converter/detectors/: list_detector.py
pdf_converter/formatters/: html_formatter.py
pdf_converter/handlers/: file_handler.py
pdf_converter/services/converters/: pdf_html_converter.py  pdf_markdown_converter.py
src/: main.py
src/builders/: html_builder.py
src/builders/components/: table_builder.py
src/builders/components/markdown/: list_builder.py  table_builder.py
src/core/contracts/: ihtml_builder.py  ipage_formatter.py
src/core/domain/: models.py
src/formatters/: html_formatter.py  markdown_formatter.py
src/handlers/: file_handler.py
src/pdf_converter/builders/: html_builder.py
src/pdf_converter/core/contracts/: ifile_handler.py  ihtml_builder.py  ipage_formatter.py
src/processors/: page_processor.py  pdf_processor.py
src/services/converters/: pdf_html_converter.py
tests/builders/: test_markdown_builder.py
