[metadata]
name = pdf_converter
version = 0.1
description = Conversor de PDF
author = Seu Nome
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =  
    PyMuPDF

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov

[tool:pytest]
python_paths = src
testpaths = tests
addopts = --verbose
